Bug 156622 - A11Y sidebar: not clickable warning about blinking text
Summary: A11Y sidebar: not clickable warning about blinking text
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Balázs Varga
URL:
Whiteboard: target:24.2.0 target:7.6.1
Keywords:
Depends on:
Blocks: Accessibility-Check
  Show dependency treegraph
 
Reported: 2023-08-04 19:56 UTC by Gabor Kelemen (Collabora)
Modified: 2023-08-15 06:22 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Screenshot of the issue (138.69 KB, image/png)
2023-08-04 19:56 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2023-08-04 19:56:48 UTC
Created attachment 188784 [details]
Screenshot of the issue

attachment 159887 [details] has blinking character formatting on several paragraphs.
The accessibility sidebar gives a warning about this, but no hyperlink to highlight the issue.

1. Open attachment 159887 [details]
2. Open the Accessibility sidebar
3. Observe the warning "Blinking text."
-> Should have a link highlighting the problematic text, so you can Ctrl-M it.

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: eff5a3fe98ca5d1d28c4f5386c4af8a3be8f5703
CPU threads: 8; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: hu-HU (hu_HU.UTF-8); UI: en-US
Calc: threaded
Comment 1 Commit Notification 2023-08-14 15:24:32 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/13d51d47e8c7c8cca6d1271dfad42e0af982945f

tdf#156622 - A11Y - fix not clickable warning about blinking text

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2023-08-15 06:22:00 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/efec67f1953640c5536b9635f65695552c001693

tdf#156622 - A11Y - fix not clickable warning about blinking text

It will be available in 7.6.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.