tdf#156622 - A11Y - fix not clickable warning about blinking text

Make clickable and highlight the problematic text.

Change-Id: Ie53c74b0364d08e4299e4c27ff2744a8c547844e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/155586
Tested-by: Jenkins
Reviewed-by: Balazs Varga <balazs.varga.extern@allotropia.de>